product block button fixes

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -243,11 +243,11 @@
 		}
 		.btn {
 			display: inline-block;
-			padding: 13px 20px;
+			padding: 10px 20px 16px;
 			font-family: "Open Sans Condensed";
-			font-size: 2em;
+			font-size: 2.2em;
 			font-weight: 700;
-			text-transform: uppercase;
+			text-transform: lowercase;
 			line-height: 1;
 			border-radius: 100px;
 			cursor: pointer;
@@ -259,12 +259,7 @@
 			color: #fff;
 			background-color: #f05840;
 		}
-		.btn--orange:hover {
-			margin-top: -3px;
-			margin-bottom: 3px;
-			box-shadow: 0 5px 2px #ccc;
-		}
-		.btn--orange:active {
+		.btn--orange:hover, .btn--orange:active {
 			background-color: #ff6f59;
 		}
 		.btn--promo-buy {
@@ -273,8 +268,8 @@
 		.btn--promo-buy:after {
 			position: absolute;
 			display: inline-block;
-			width: 15px;
-			height: 15px;
+			width: 13px;
+			height: 13px;
 			content: '';
 			background-image: url(img/gde-kupit-strelka.svg);
 			background-position: center;
