--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -141,11 +141,18 @@
 					<div class="product-slider">
 						<div class="product-slide">
 							<div class="col col--half">
-								<span class="product-slider__photo">
-									<img src="img/product-1.png" alt="">
-								</span>
+								<div class="product-slider__photo js-promo-slider">
+									<img src="img/product-1.png" alt="" data-slideId='1'>
+									<img src="img/product-2.png" alt="" data-slideId='2'>
+									<img src="img/product-3.png" alt="" data-slideId='3'>
+									<img src="img/product-4.png" alt="" data-slideId='4'>
+									<img src="img/product-5.png" alt="" data-slideId='5'>
+									<img src="img/product-6.png" alt="" data-slideId='6'>
+									<img src="img/product-7.png" alt="" data-slideId='7'>
+								</div>
 							</div>
-							<div class="col col--half">
+
+							<div class="col col--half col--info">
 								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
 								<div class="option-list">
 									<span class="option">пресервы</span>
@@ -154,8 +161,12 @@
 
 								<div class="btn btn--orange btn--promo-buy">Где купить</div>
 
-								<div style="margin-top: 30px;">
-									<img src="img/stars.png" alt="">
+								<div class="product__rating">
+									<img src="img/star-filled.png" alt="">
+									<img src="img/star-filled.png" alt="">
+									<img src="img/star-filled.png" alt="">
+									<img src="img/star-empty.png" alt="">
+									<img src="img/star-empty.png" alt="">
 								</div>
 							</div>
 						</div>
@@ -165,120 +176,373 @@
 		</div>
 	</section>
 
+	<section class="promo-nav">
+		<div class="container">
+			<div class="row promo-slider-nav-wrap">
+				<div class="col-xl-10 col-xl-offset-1">
+					<div class="js-promo-slider-nav">
+						<div class="promo-nav-slide">
+							<img src="img/nav-product-thumb-1.png" alt="">
+						</div>
+
+						<div class="promo-nav-slide">
+							<img src="img/nav-product-thumb-2.png" alt="">
+						</div>
+
+						<div class="promo-nav-slide">
+							<img src="img/nav-product-thumb-3.png" alt="">
+						</div>
+
+						<div class="promo-nav-slide">
+							<img src="img/nav-product-thumb-4.png" alt="">
+						</div>
+
+						<div class="promo-nav-slide">
+							<img src="img/nav-product-thumb-5.png" alt="">
+						</div>
+
+						<div class="promo-nav-slide">
+							<img src="img/nav-product-thumb-6.png" alt="">
+						</div>
+
+						<div class="promo-nav-slide">
+							<img src="img/nav-product-thumb-7.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<section class="wave-separator"></section>
+
+
+	<section class="recipes">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-12">
+					<h2 class="section-title">Рецепты из иваси</h2>
+				</div>
+
+				<div class="col-xl-6 recipe-main-photo">
+					<div class="recipe recipe--main">
+						<img src="img/seld-pod-shuboi.jpg" alt="Салат Сельдь под шубой">
+					</div>
+				</div>
+
+				<div class="col-xl-6">
+					<div class="recipe recipe__info">
+						<h4 class="recipe-name">Салат «Сельдь под шубой»</h4>
+
+						<div class="details">
+							<div class="time">50 мин.</div>
+							<div class="portion">2</div>
+						</div>
+
+						<div class="btn btn--orange btn--pecipe-more">Узнать подробнее</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row ">
+				<div class="col-xl-12">
+					<div class="recipes-slider js-recipes-slider">
+						<div class="recipe">
+							<div class="recipe__photo">
+								<img src="img/kanape-ivasi-kivi.jpg" alt="Канапе с иваси и киви">
+							</div>
+							<span class="recipe__caption">Канапе с иваси и киви</span>
+						</div>
+
+						<div class="recipe">
+							<div class="recipe__photo">
+								<img src="img/seld-po-datski.jpg" alt="Бутерброд с сельдью по-датски">
+							</div>
+							<span class="recipe__caption">Бутерброд с сельдью по-датски</span>
+						</div>
+
+						<div class="recipe">
+							<div class="recipe__photo">
+								<img src="img/rus-pyatnica.jpg" alt="Салат Русская пятница">
+							</div>
+							<span class="recipe__caption">Салат Русская пятница</span>
+						</div>
+
+						<div class="recipe">
+							<div class="recipe__photo">
+								<img src="img/kanape-ivasi-kivi.jpg" alt="Канапе с иваси и киви">
+							</div>
+							<span class="recipe__caption">Канапе с иваси и киви</span>
+						</div>
+
+						<div class="recipe">
+							<div class="recipe__photo">
+								<img src="img/seld-po-datski.jpg" alt="Бутерброд с сельдью по-датски">
+							</div>
+							<span class="recipe__caption">Бутерброд с сельдью по-датски</span>
+						</div>
+
+						<div class="recipe">
+							<div class="recipe__photo">
+								<img src="img/rus-pyatnica.jpg" alt="Салат Русская пятница">
+							</div>
+							<span class="recipe__caption">Салат Русская пятница</span>
+						</div>
+					</div>
+				</div>
+
+
+
+
+				<!-- <div class="col-xl-4">
+					<div class="recipe">
+						<img src="img/kanape-ivasi-kivi.jpg" alt="Салат Сельдь под шубой">
+					</div>
+				</div>
+
+				<div class="col-xl-4">
+					<div class="recipe">
+						<img src="img/seld-po-datski.jpg" alt="Салат Сельдь под шубой">
+					</div>
+				</div>
+
+				<div class="col-xl-4">
+					<div class="recipe">
+						<img src="img/rus-pyatnica.jpg" alt="Салат Сельдь под шубой">
+					</div>
+				</div> -->
+			</div>
+		</div>
+	</section>
+
+
+	<section class="wave-separator"></section>
+
+
+	<section class="comments">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-12">
+					<h2 class="section-title">Отзывы</h2>
+				</div>
+
+				<div class="col-xl-12">
+					<div class="js-comments-slider">
+						<div class="comment">
+							<div class="comment__text">Яркий насыщенный вкус. Есть кожура с одной стороны. Легко очищается от кожуры. Есть мелкие косточки, иногда даже не мелкие, но меня это не смущает. Вкусная сардина, буду брать ещё.</div>
+
+							<div class="comment__author">
+								<div class="author__photo">
+									<img src="img/user.svg" alt="фото пользователя">
+								</div>
+
+								<div class="author__info">
+									<a class="author__link" href="#"><span class="author__name">Олеся</span></a>
+									<span class="author__type">покупатель</span>
+								</div>
+							</div>
+						</div>
+
+						<div class="comment">
+							<div class="comment__text">Купила сегодня «иваси» филе холодного копчения, так как рыбу люблю и разбираюсь… угодить мне не так просто. Была приятно удивлена, насколько хороша рыбка. В меру соли, не сухая, легкий аромат копчения! Супер! Качество на пять с плюсом!</div>
+
+							<div class="comment__author">
+								<div class="author__photo">
+									<img src="img/user.svg" alt="фото пользователя">
+								</div>
+
+								<div class="author__info">
+									<a class="author__link" href="#"><span class="author__name">Инна</span></a>
+									<span class="author__type">покупатель</span>
+								</div>
+							</div>
+						</div>
+
+						<div class="comment">
+							<div class="comment__text">Изумительно!!! Очень вкусная, малосолёная и не очень жирная рыбка! С копчёностью тоже всё в норме, в меру. Очень понравилась всей семье. Купила сначала две упаковки, оказалось мало. Ходила ещё покупать.</div>
+
+							<div class="comment__author">
+								<div class="author__photo">
+									<img src="img/user.svg" alt="фото пользователя">
+								</div>
+
+								<div class="author__info">
+									<a class="author__link" href="#"><span class="author__name">Мария</span></a>
+									<span class="author__type">покупатель</span>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="comment">
+							<div class="comment__text">Очень вкусная рыбка с подкопченным вкусом и приятным и естественным запахом дымка. В меру маслянистая, плотной структуры, с сохранённой кожицей. Не содержит костей. Вкус приятный, соленый и невероятно нежный. С чёрным хлебушком зашло на ура! Отличная закуска, буду покупать ещё…</div>
+
+							<div class="comment__author">
+								<div class="author__photo">
+									<img src="img/user.svg" alt="фото пользователя">
+								</div>
+
+								<div class="author__info">
+									<a class="author__link" href="#"><span class="author__name">Вадим</span></a>
+									<span class="author__type">покупатель</span>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="comment">
+							<div class="comment__text">Рыба вкусная, в меру соленая, жирная.</div>
+
+							<div class="comment__author">
+								<div class="author__photo">
+									<img src="img/user.svg" alt="фото пользователя">
+								</div>
+
+								<div class="author__info">
+									<a class="author__link" href="#"><span class="author__name">Людмила</span></a>
+									<span class="author__type">покупатель</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="js-comments-slider-controls"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 	<style>
-		.promo {
-			width: 100%;
-			padding: 160px 0;
-			background-image: url(img/bg-promo.png);
-			background-position: center top;
-			-webkit-background-size: cover;
-			background-size: cover;
-			background-repeat: no-repeat;
+
+
+
+		.comments {
+			background: rgb(146,206,212);
+			background: linear-gradient(0deg, rgba(146,206,212,1) 0%, rgba(209,232,235,1) 50%, rgba(255,255,255,1) 100%);
+			padding: 75px 0;
 		}
-		.product-slide {
-			display: -webkit-flex;
-			display: -moz-flex;
-			display: -ms-flex;
-			display: -o-flex;
-			display: flex;
-			align-items: center;
-			justify-content: flex-start;
-		}
-		.col {
-			display: inline-block;
-		}
-		.col--half {
-			width: 50%;
-		}
-		.product-slider__photo {
-			position: relative;
-			display: block;
-			max-width:  423px;
-			max-height: 533px;
-			z-index: 10;
-		}
-		.product-slider__photo img {
-			width: 100%;
-			height: 100%;
-		}
-		.product-slider__photo:after {
+		.comments:before, .comments:after {
 			position: absolute;
-			display: block;
 			content: '';
-			width: 140%;
-			height: 135px;
-			bottom: -75px;
-			left: -40px;
-			background-image: url(img/product-shadow.png);
-			background-position: center;
-			-webkit-background-size: contain;
-			background-size: contain;
+			display: inline-block;
+			width: 250px;
+			height: 185px;
+			background-image: url(img/quote-stroke.svg);
 			background-repeat: no-repeat;
-			z-index: -1;
+			background-size: contain;
+			background-position: center;
 		}
-		.product-slide__title {
+		.comments:before {
+			top: 80px;
+			left: 10%;
+		}
+		.comments:after {
+			bottom: 80px;
+			right: 10%;
+			transform: rotate(180deg);
+		}
+
+
+		.comments .section-title {
+			margin-bottom: 75px;
+		}
+		.comment {
+			max-width: 550px !important;
+			background-color: #fff;
+			border-radius: 10px;
+			border: 1px solid #ffffff;
+			padding: 66px 49px 41px 49px;
+			/*padding: 40px;*/
+			margin: 0 25px;
+		}
+		.comment:before {
+			position: absolute;
+			content: '';
+			display: inline-block;
+			width: 110px;
+			height: 80px;
+			background-image: url(img/quote-gray.svg);
+			background-repeat: no-repeat;
+			background-size: contain;
+			background-position: center;
+			top: 20px;
+			left: 30px;
+		}
+
+		.comment__text {
+			width: 100%;
 			color: #01336e;
-			font-family: "Open Sans Condensed", sans-serif;
-			font-size: 3.6em;
-			font-weight: bold;
-			line-height: 1.2;
-			margin-bottom: 60px;
-		}
-		.option-list {
-			display: -webkit-flex;
-			display: -moz-flex;
-			display: -ms-flex;
-			display: -o-flex;
-			display: flex;
-			flex-direction: column;
-			align-items: flex-start;
-			justify-content: flex-start;
+			font-family: "Open Sans";
 			font-size: 1.8em;
 			font-weight: 400;
-			line-height: 1.5;
-			color: #01336e;
-			margin-bottom: 35px;
-			font-family: 'Open Sans', sans-serif;
+			line-height: 1.3;
+			margin-bottom: 50px;
+			min-height: 100px;
+			max-height: 100px;
+			overflow-y: auto;
+			padding-right: 20px;
 		}
-		.btn {
-			display: inline-block;
-			padding: 10px 20px 16px;
+		.author__photo {
+			width: 65px;
+			height: 68px;
+			margin-right: 16px;
+		}
+		.comment__author {
+			display: -webkit-inline-flex;
+			display: -moz-inline-flex;
+			display: -ms-inline-flex;
+			display: -o-inline-flex;
+			display: inline-flex;
+
+			align-items: center;
+			justify-content: space-between;
+
+			left: 50%;
+			transform: translateX(-50%);
+		}
+		.author__photo img {
+			width: inherit;
+			height: inherit;
+		}
+		.author__info {
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+
+			flex-direction: column;
+			justify-content: center;
+			align-items: flex-start;
+		}
+		.author__link, .author__link:hover {
+			text-decoration: none;
+		}
+		.author__name {
+			color: #01336e;
 			font-family: "Open Sans Condensed";
 			font-size: 2.2em;
 			font-weight: 700;
-			text-transform: lowercase;
-			line-height: 1;
-			border-radius: 100px;
-			cursor: pointer;
-			outline: none;
-			transition: 0.2s linear;
-			user-select: none;
 		}
-		.btn--orange {
-			color: #fff;
-			background-color: #f05840;
+		.author__type {
+			color: #acb2b5;
+			font-family: "Open Sans Condensed";
+			font-size: 1.8em;
+			font-weight: 300;
+			line-height: 1.5;
 		}
-		.btn--orange:hover, .btn--orange:active {
-			background-color: #ff6f59;
-		}
-		.btn--promo-buy {
-			padding-right: 45px;
-		}
-		.btn--promo-buy:after {
-			position: absolute;
-			display: inline-block;
-			width: 13px;
-			height: 13px;
-			content: '';
-			background-image: url(img/gde-kupit-strelka.svg);
-			background-position: center;
-			-webkit-background-size: contain;
-			background-size: contain;
-			background-repeat: no-repeat;
-			top: 50%;
-			right: 20px;
-			transform: translateY(-50%);
+		.js-comments-slider-controls {
+			max-width: 250px;
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+
+			justify-content: space-between;
+			margin: 0 auto;
+			margin-top: 70px;
 		}
 	</style>
 
