new products photos

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -162,11 +162,11 @@
 								<div class="btn btn--orange btn--promo-buy">Где купить</div>
 
 								<div class="product__rating">
-									<img src="img/star-filled.png" alt="">
-									<img src="img/star-filled.png" alt="">
-									<img src="img/star-filled.png" alt="">
-									<img src="img/star-empty.png" alt="">
-									<img src="img/star-empty.png" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
 								</div>
 							</div>
 						</div>
@@ -292,9 +292,6 @@
 					</div>
 				</div>
 
-
-
-
 				<!-- <div class="col-xl-4">
 					<div class="recipe">
 						<img src="img/kanape-ivasi-kivi.jpg" alt="Салат Сельдь под шубой">
@@ -374,7 +371,6 @@
 							</div>
 						</div>
 
-
 						<div class="comment">
 							<div class="comment__text">Очень вкусная рыбка с подкопченным вкусом и приятным и естественным запахом дымка. В меру маслянистая, плотной структуры, с сохранённой кожицей. Не содержит костей. Вкус приятный, соленый и невероятно нежный. С чёрным хлебушком зашло на ура! Отличная закуска, буду покупать ещё…</div>
 
@@ -389,7 +385,6 @@
 								</div>
 							</div>
 						</div>
-
 
 						<div class="comment">
 							<div class="comment__text">Рыба вкусная, в меру соленая, жирная.</div>
@@ -414,9 +409,6 @@
 
 
 	<style>
-
-
-
 		.comments {
 			background: rgb(146,206,212);
 			background: linear-gradient(0deg, rgba(146,206,212,1) 0%, rgba(209,232,235,1) 50%, rgba(255,255,255,1) 100%);
@@ -442,8 +434,6 @@
 			right: 10%;
 			transform: rotate(180deg);
 		}
-
-
 		.comments .section-title {
 			margin-bottom: 75px;
 		}
@@ -453,7 +443,6 @@
 			border-radius: 10px;
 			border: 1px solid #ffffff;
 			padding: 66px 49px 41px 49px;
-			/*padding: 40px;*/
 			margin: 0 25px;
 		}
 		.comment:before {
@@ -469,7 +458,6 @@
 			top: 20px;
 			left: 30px;
 		}
-
 		.comment__text {
 			width: 100%;
 			color: #01336e;
