some style fixes

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -240,7 +240,7 @@
 
 			<div class="row recipes-slider-wrap">
 				<div class="col-xl-12">
-					<div class="recipes-slider js-recipes-slider animated animated-scroll delay-0-8s fast" data-animateClass="fadeInUp">
+					<div class="recipes-slider js-recipes-slider">
 						<div class="recipe">
 							<div class="recipe__photo">
 								<img src="img/kanape-ivasi-kivi.jpg" alt="Канапе с иваси и киви">
@@ -553,6 +553,7 @@
 		</div>
 	</section>
 
+
 	<section class="wave-separator"></section>
 
 
@@ -579,6 +580,8 @@
 
 		<span class="bg-elem bg-footer-ship animated animated-scroll delay-1s slower" data-animateClass="fadeInRight"></span>
 	</footer>
+
+
 
 	<style>
 		.certificates {
@@ -615,93 +618,6 @@
 			top: 60%;
 			right: 13%;
 		}
-
-
-
-
-
-		.shops {
-			padding: 90px 0 120px 0;
-		}
-		.shops .section-title {
-			margin-bottom: 100px;
-		}
-		.shops-list {
-			display: -webkit-flex;
-			display: -moz-flex;
-			display: -ms-flex;
-			display: -o-flex;
-			display: flex;
-			flex-wrap: wrap;
-			align-items: center;
-			justify-content: space-between;
-		}
-		.shop-link {
-			width: 18%;
-			text-decoration: none;
-			outline: none;
-			margin-bottom: 100px;
-		}
-		.shop-link img {
-			width: 100%;
-			height: auto;
-		}
-		.btn--more-shops {
-			margin: 0 auto;
-		}
-		.js-more-shops {
-			text-align: center;
-		}
-
-
-
-
-
-
-
-
-
-
-
-		footer {
-			background: linear-gradient(0deg, rgba(146,206,212,1) 0%, rgba(209,232,235,1) 50%, rgba(255,255,255,1) 100%);
-			padding: 75px 0 0 0;
-		}
-		footer .section-title {
-			margin-bottom: 70px;
-		}
-		.bg-footer-ship {
-			background-image: url(img/kontakt-ship.svg);
-			width: 423px;
-			height: 309px;
-			top: 23%;
-			right: 10%;
-		}
-		.block-title, .phone {
-			color: #01336e;
-			font-family: "Open Sans Condensed";
-			font-size: 3.3em;
-			font-weight: 700;
-			margin-bottom: 20px;
-		}
-		.address {
-			color: #01336e;
-			font-family: "Open Sans";
-			font-weight: 400;
-			font-size: 1.8em;
-			line-height: 2;
-		}
-		.copyrights {
-			padding: 16px 0 25px 0;
-			margin: 80px 40px 0 40px;
-			border-top: 1px solid #fff;
-			color: #ffffff;
-			font-family: "Open Sans";
-			font-size: 1.8em;
-			font-weight: 400;
-			line-height: 1;
-		}
-
 	</style>
 
 
